# WinterSQL

./: CMakeLists.txt  LICENSE
docs/: Classes.drawio  DataTypes.md
include/: Column.hpp  Field.hpp  RowType.hpp  Schema.hpp  misc.hpp
include/DataType/: DataType.hpp  DataTypeDescriptorBase.hpp  IntegerDescriptor.hpp
include/Table/: BaseTable.hpp  MemoryTable.hpp  Table.hpp
lib/: CMakeLists.txt  IntegerDescriptor.cpp
lib/Table/: MemoryTable.cpp
test/: CMakeLists.txt  test.cpp
test/Table/: MemoryTable.cpp
